@@ -3,7 +3,7 @@ package convertors;
 public class StringToStringConvertor extends Convertor<String> {
     @Override
     public String convert(String value, Class<String> type) {
-        if (value.isBlank() || value.isEmpty()) {
+        if (value.trim().isEmpty()) {
             return null;
         }
         return value;
